# aidocs

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  CONTRIBUTOR.md  README.md  apply_corrections.sh  apply_links.sh  apply_more_links.sh  apply_tutorial_links.sh  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.config/goose/: config.yaml
.github/actions/claude-code-action/: action.yml
.github/workflows/: claude.yml  dragon-ai-agent.yaml  dragon-ai.yml
docs/: examples.md  faq.md  getting-started.md  glossary.md  index.md
docs/how-tos/: author-skills.md  build-agentic-harness.md  create-agentic-curation-pipeline.md  deep-research-integration.md  instruct-github-agent.md  integrate-ai-into-your-kb.md  make-ids-hallucination-resistant.md  pr-reviews-for-agent-improvement.md  set-up-github-actions.md
docs/overrides/: main.html
docs/overrides/stylesheets/: extra.css
docs/reference/: agentic-tools.md  ai-blame.md  claude-skills.md  client-apps.md  github-integrations.md
docs/reference/clients/: claude-code.md  claude-desktop.md  codex-cli.md  (+3 more)
docs/stylesheets/: extra.css
docs/tutorials/: accelerating-ontology-curation.md  batch-term-addition.md  literature-assisted-curation.md  ontology-editing-with-ai.md  subagents-for-ontology-coding.md  tutorials-for-curators.md
how-tos/instruct-github-agent/: index.html
how-tos/integrate-ai-into-your-kb/: index.html
how-tos/set-up-github-actions/: index.html
search/: search_index.json
src/aidocs/: __init__.py
tests/: test_main.py
tutorials/ontology-editing-with-ai/: index.html
