[project]
name = "aidocs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mungall", email = "cjm@berkeleybop.org" }
]
requires-python = ">=3.9"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
]

[project.scripts]
aidocs = "aidocs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
